# trt

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: SETUP.md
examples/: input.txt  video.py
src/: beam.cpp  beam.h  config.cpp  config.h  coordinate.cpp  coordinate.h  globals.cpp  globals.h  hydro.cpp  hydro.h  integrate.cpp  integrate.h  main.cpp  microphysics.cpp  microphysics.h  relativity.cpp  relativity.h
tests/: .gitattribute  README.md  averageangle_test.cpp  averageangle_test.ipynb  averageangle_test_in_1  averageangle_test_out_1  beam_test.cpp  beam_test_in_1  beam_test_in_10  beam_test_in_2  beam_test_in_3  beam_test_in_4  beam_test_in_5  beam_test_in_6  beam_test_in_7  beam_test_in_8  beam_test_in_9  beam_test_out_1  beam_test_out_10  beam_test_out_2  beam_test_out_3  beam_test_out_4  beam_test_out_5  beam_test_out_6  beam_test_out_7  beam_test_out_8  beam_test_out_9  bug_log.md  config_test.cpp  config_test_in_1  config_test_in_2  config_test_in_3  config_test_in_4  config_test_in_4.1  config_test_out_1  config_test_out_2  config_test_out_3  config_test_out_4  data0236.vtu  data0237.vtu  (+68 more)
vtk/: CMakeLists.txt  ReadAllUnstructuredGridTypes.cxx
